[gd_scene load_steps=3 format=3 uid="uid://bgmwwij4ehamq"]

[ext_resource type="Script" path="res://scripts/EnemySpawnMarkers.gd" id="1_5bhma"]
[ext_resource type="PackedScene" uid="uid://d3otmi6pm5yd1" path="res://scene/enemy_spawn.tscn" id="2_rdql6"]

[node name="EnemySpawnMarkers" type="Node2D" groups=["EnemySpawn"]]
script = ExtResource("1_5bhma")

[node name="EnemySpawnLeft1" parent="." instance=ExtResource("2_rdql6")]
unique_name_in_owner = true
position = Vector2(-250, -140)

[node name="EnemySpawnLeft2" parent="." instance=ExtResource("2_rdql6")]
unique_name_in_owner = true
position = Vector2(-250, -70)

[node name="EnemySpawnLeft3" parent="." instance=ExtResource("2_rdql6")]
unique_name_in_owner = true
position = Vector2(-250, 0)

[node name="EnemySpawnLeft4" parent="." instance=ExtResource("2_rdql6")]
unique_name_in_owner = true
position = Vector2(-250, 70)

[node name="EnemySpawnRight1" parent="." instance=ExtResource("2_rdql6")]
unique_name_in_owner = true
position = Vector2(250, -140)

[node name="EnemySpawnRight2" parent="." instance=ExtResource("2_rdql6")]
unique_name_in_owner = true
position = Vector2(250, -70)

[node name="EnemySpawnRight3" parent="." instance=ExtResource("2_rdql6")]
unique_name_in_owner = true
position = Vector2(250, 0)

[node name="EnemySpawnRight4" parent="." instance=ExtResource("2_rdql6")]
unique_name_in_owner = true
position = Vector2(250, 70)

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
autostart = true
